<?xml version="1.0"?>
<package format="3">
  <name>envimo401_bringup</name>
  <version>0.0.1</version>
  <description>Envimo RMP401 Robot bringup package.</description>
  <maintainer email="info@envimo.xyz">ENVIMO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>segwayrmp</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>chassis_enable</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

